hard-gists/01bf3900d3a02c4e3927b2a2bcf39100/run.log
=== Docker Run Log for 01bf3900d3a02c4e3927b2a2bcf39100 ===
Started at: Mi 29. Okt 11:20:57 CET 2025

[2025-10-29 11:20:57] START: Running container for 01bf3900d3a02c4e3927b2a2bcf39100
[2025-10-29 11:20:58] SUCCESS: Container fda330ce93c6e2250958b8ff6d399c8cffaf964d52e6ab6a8af746161f119b56 started for 01bf3900d3a02c4e3927b2a2bcf39100
=== Container logs for 01bf3900d3a02c4e3927b2a2bcf39100 ===
  File "/snippet.py", line 60
    print "Password: {0:}{1:}{2:}".format(
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 01bf3900d3a02c4e3927b2a2bcf39100 ===
[2025-10-29 11:21:00] INFO: Container fda330ce93c6e2250958b8ff6d399c8cffaf964d52e6ab6a8af746161f119b56 has stopped
